
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2007-02-27 DP  1.8.0  Allow install time re-branding. This allows rebranded 
                      versions of pgAdmin to be distributed without code 
                      modifications, but with references to the original 
                      pgAdmin being displayed instead. Also add support for
                      shaped splash screens.
2007-02-26 DP  1.8.0  Add a set of options to allow the user to hide selected
                      object types from the treeview. Note that the new default
                      settings will hide less commonly used objects such as 
                      casts, languages, aggregates, operators etc.
2007-02-23 DP  1.6.3  Fix a rare bug in the Edit Grid which could cause a crash
                      when editting data in tables with deleted columns and a
                      primary key that isn;t at the beginning of the table.
                      Thanks to Patrick De Visschere for the test case.
2007-02-23 DP  1.6.3  Use the correct version of the Slony scripts when
                      creating a new cluster, per Duncan Beeby.
2007-02-22 DP  1.6.3  Prevent the Edit Grid Filter causing a crash if an
                      invalid filter containing a % is used, per Erwin.
2007-02-16 DP  1.8.0  Replace the Mac installer with code to create a
                      distribution disk image [Florian G. Pflug]
2007-02-16 DP  1.6.3  Fix a minor bug in app bundle creation for Mac [Florian
                      G. Pflug]
2007-02-14 DP  1.8.0  Allow entire servers to be backed up.
2007-02-14 DP  1.8.0  Allow global objects to be backed up.