@@ -1,0 +1,37 @@
+/* XPM */
+static char *catalog_sm_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 15 1",
+"@ c #FFFFFF",
+"; c #9E5EFE",
+"  c None",
+"# c #B17EFE",
+"* c #A970FE",
+"& c #FEFF9A",
+"= c #A56AFE",
+"+ c #B583FF",
+"$ c #FDFF4E",
+". c #AF94D8",
+"X c #7749BD",
+"- c #A062FE",
+"O c #B889FF",
+"o c #BB8DFF",
+"% c #AE78FE",
+/* pixels */
+"                ",
+"                ",
+"                ",
+"       .X.      ",
+"      .XoX.     ",
+"     .XOXOX.    ",
+"    .X+X@X+X.   ",
+"   .X#X@$@X#X.  ",
+"   X%X@$&$@X%X  ",
+"   .X*X@$@X*X.  ",
+"    .X=X@X=X.   ",
+"     .X-X-X.    ",
+"      .X;X.     ",
+"       .X.      ",
+"                ",
+"                "
+};
