@@ -1,0 +1,43 @@
+/* XPM */
+static char *catalog_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 21 1",
+"1 c #9F60FE",
+"# c #FFFFFF",
+"$ c #B381FF",
+"@ c #B685FF",
+"  c None",
+"% c #B17EFE",
+"- c #FEFF9A",
+"> c #A56AFE",
+": c #A86EFE",
+"O c #B98BFF",
+"2 c #9C5AFE",
+"* c #FDFF4E",
+". c #AF94D8",
+"X c #7749BD",
+"< c #A062FE",
+"+ c #B889FF",
+"; c #AB74FE",
+", c #A366FE",
+"o c #BB8DFF",
+"= c #AE78FE",
+"& c #E4E5A7",
+/* pixels */
+"      .XX.      ",
+"     .XooX.     ",
+"    .XOXXOX.    ",
+"   .X+X..X+X.   ",
+"  .X@X.##.X@X.  ",
+" .X$X.####.X$X. ",
+".X%X.#&**&#.X%X.",
+"X=X.##*--*##.X=X",
+"X;X.##*--*##.X;X",
+".X:X.#&**&#.X:X.",
+" .X>X.####.X>X. ",
+"  .X,X.##.X,X.  ",
+"   .X<X..X<X.   ",
+"    .X1XX1X.    ",
+"     .X22X.     ",
+"      .XX.      "
+};
