@@ -1,0 +1,39 @@
+/* XPM */
+static char *catalogs_xpm[] = {
+/* columns rows colors chars-per-pixel */
+"16 16 17 1",
+"% c #8F5ED8",
+"@ c #FFFFFF",
+"# c #8E68C8",
+"> c #9E5EFE",
+"  c None",
+"$ c #B17EFE",
+"* c #A970FE",
+"- c #FEFF9A",
+"; c #A56AFE",
+"+ c #B583FF",
+"= c #FDFF4E",
+". c #AF94D8",
+"X c #7749BD",
+": c #A062FE",
+"O c #B889FF",
+"o c #BB8DFF",
+"& c #AE78FE",
+/* pixels */
+"    .X.         ",
+"   .XoX.        ",
+"  .XOXOX.       ",
+" .X+X@X+X#X.    ",
+".X$X@X@X%XoX.   ",
+"X&X@XXX@XOXOX.  ",
+".X*XXoXX+X@X+X. ",
+" .XXOXX$X@=@X$X.",
+" .X+XX&X@=-=@X&X",
+".X$X@XX*X@=@X*X.",
+"X&X@=-XX;X@X;X. ",
+".X*X@=@XX:X:X.  ",
+" .X;X@X;XX>X.   ",
+"  .X:X:X..X.    ",
+"   .X>X.        ",
+"    .X.         "
+};
