@@ -19,6 +19,9 @@ pgadmin3_SOURCES += \
 	$(srcdir)/include/images/cast-sm.xpm \
 	$(srcdir)/include/images/cast.xpm \
 	$(srcdir)/include/images/casts.xpm \
+	$(srcdir)/include/images/catalog.xpm \
+	$(srcdir)/include/images/catalog-sm.xpm \
+	$(srcdir)/include/images/catalogs.xpm \
 	$(srcdir)/include/images/check.xpm \
 	$(srcdir)/include/images/checked.xpm \
 	$(srcdir)/include/images/clip_copy.xpm \
