@@ -92,6 +92,7 @@ public:
     virtual wxString GetFullName() const { return name; }
     virtual wxString GetIdentifier() const { return name; }
     virtual wxString GetQuotedIdentifier() const { return qtIdent(name); }
+	virtual wxString GetDisplayName() const { return GetFullName(); };
 
     virtual wxMenu *GetNewMenu();
 
