@@ -234,6 +234,8 @@ bool sysSettings::GetDisplayOption(const wxString &objtype)
 		engtype = wxT("Groups/login roles");
 	else if (objtype == _("Users/login roles")) 
 		engtype = wxT("Users/login roles");
+	else if (objtype == _("Catalogs")) 
+		engtype = wxT("Catalogs");
 	else if (objtype == _("Casts")) 
 	{
 		engtype = wxT("Casts");
@@ -312,6 +314,7 @@ void sysSettings::SetDisplayOption(const wxString &objtype, bool display)
 	else if (objtype == _("pgAgent jobs")) engtype = wxT("pgAgent jobs");
 	else if (objtype == _("Groups/group roles")) engtype = wxT("Groups/login roles");
 	else if (objtype == _("Users/login roles")) engtype = wxT("Users/login roles");
+	else if (objtype == _("Catalogs")) engtype = wxT("Catalogs");
 	else if (objtype == _("Casts")) engtype = wxT("Casts");
 	else if (objtype == _("Languages")) engtype = wxT("Languages");
 	else if (objtype == _("Schemas")) engtype = wxT("Schemas");
