@@ -35,7 +35,10 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2007-02-27 DP  1.8.0  Allow install time re-branding. This allows rebranded 
+2007-03-01 DP  1.8.0  Display catalogs separately from schemas, and don't 
+                      treat them as system objects any longer (they can be
+                      hidden using the display options).
+2007-02-27 DP  1.8.0  Allow install time re-branding. This allows rebranded
                       versions of pgAdmin to be distributed without code 
                       modifications, but with references to the original 
                       pgAdmin being displayed instead. Also add support for
